[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "A lightweight multi-agent workflow orchestration CLI (offline by default)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "VictorLin" }]
keywords = ["agents", "llm", "workflow", "orchestration", "cli", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/VictorLin/agentforge"
Repository = "https://github.com/VictorLin/agentforge"
Issues = "https://github.com/VictorLin/agentforge/issues"

[project.scripts]
agentforge = "agentforge.cli:main"

[tool.setuptools]
packages = ["agentforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
